artifacts/examples/kustomize/admission/validation/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-validator
  namespace: dsc
spec:
  selector:
    app: policy-validator-pod
  ports:
    - port: 443
      targetPort: webhook-api
